Finished designing basic stuffs

--- a/style.css
+++ b/style.css
@@ -251,6 +251,102 @@ li a{
     margin-left: 100px;
 }
 
-.social {
+.social-icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 2rem;
+    width: 30%;
+    margin: 25% 35%;
+    padding-top: 30px;
+}
+
+/* Mobile View */
+
+@media (max-width: 768px) {
+    #nav {
+        display: none;
+    }
+
+    #mobile-nav {
+        display: block;
+    }
+    .mobile-navbar {
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+        z-index: 5;
+    }
+
+    ul {
+        background-color: rgba(0, 0, 0, 0.625);
+    }
+
+    .movie-project {
+        width: 300px;
+        height: 360px;
+        background: #fff;
+        position: relative;
+        box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        margin: 50px;
+        background-image: url(/images/movie.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+
+    .gym-project {
+        width: 300px;
+        height: 360px;
+        background: #fff;
+        position: relative;
+        box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        margin: 50px;
+        background-image: url(/images/ai.jpg);
+        background-size: cover;
+        background-position: center;
+    }
     
+    .dsa-project {
+        width: 300px;
+        height: 360px;
+        background: #fff;
+        position: relative;
+        box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        margin: 50px;
+        background-image: url(/images/dsa.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+
+    .about-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f8f8f8;
+        box-shadow: -15px 7px 30ox rgba(0, 0, 0, 0.2);
+    }
+
+    .about-image {
+        margin-top: 20px;
+        height: 300px;
+        width: 225px;
+        background-image: url(/images/me.jpg);
+        background-size: cover;
+        background-position: center;
+    }
+
+    .about-text {
+        margin-left: 20px;
+        width: 100%;
+        font-size: 0.75rem;
+    }
+
+    .social-icons {
+        font-size: 2rem;
+        margin-left: -10px;
+        padding: 10px;
+    }
 }
