--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
-. {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -25,11 +25,31 @@ a {
     display: none;
 }
 
+
+.links {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 10%;
+}
+
+.links .logo-title,
+.links  ul {
+    max-width: 50%;
+    flex: 0 0 50%;
+}
+
+.links  ul {
+    justify-content: flex-end;
+    gap: 40px;
+}
+
 .nav-bar{
     position: absolute;
     z-index: 2;
     width: 100%;
 }
+
 
 ul {
     display: flex;
@@ -37,8 +57,6 @@ ul {
     justify-content: space-between;
     padding: 0 10%;
     list-style: none;
-    height: 10vh;
-    /* background-color: rgba(100, 100, 100, 0.2); */
 }
 li a{
     display: block;
@@ -140,64 +158,72 @@ li a{
 }
 
 .projects {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: wrap;
+   display: grid;
+   grid-template-columns: auto auto auto; 
+    max-width: 100%;
+    margin: auto;
+    padding: 20px 0 60px;
 }
-
+.projects-items {
+    width: 100%;
+    padding: 20px;   
+}
+.movie-project,
+.gym-project,
+.dsa-project {
+    height: 360px;
+    background: #fff;
+    position: relative;
+    box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-size: cover;
+    background-position: center;
+}
 .movie-project {
-    width: 360px;
-    height: 360px;
-    background: #fff;
-    position: relative;
-    box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    margin: 50px;
     background-image: url(/images/movie.jpg);
-    background-size: cover;
-    background-position: center;
 }
-
 .gym-project {
-    width: 360px;
-    height: 360px;
-    background: #fff;
-    position: relative;
-    box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    margin: 50px;
     background-image: url(/images/ai.jpg);
-    background-size: cover;
-    background-position: center;
 }
 
 .dsa-project {
-    width: 360px;
-    height: 360px;
-    background: #fff;
-    position: relative;
-    box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    margin: 50px;
     background-image: url(/images/dsa.jpg);
-    background-size: cover;
-    background-position: center;
 }
-
 .text-container {
     position: absolute;
-    height: 75px;
     width: 100%;
     z-index: 2;
     left: 0;
     bottom: 0;
     background-color: white;
     overflow: hidden;
+    padding: 10px 20px;
+    text-align: center;
 }
 
-.text-container:hover {
+.overlay-container {
+    position: absolute;
+    width: 100%;
+    z-index: 2;
+    left: 0;
+    background-color: white;
+    overflow: hidden;
+    padding: 10px 20px;
+    transition: all 300ms ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+}
+.text-container:hover ~ .name{
+    visibility: hidden;
+    opacity: 0;
+}
+
+.text-container:hover{
     height: 350px;
+}
+.text-container:hover .overlay-container {
+    visibility: visible;
+    opacity: 1;
 }
 
 .name {
@@ -207,26 +233,26 @@ li a{
 }
 
 .content {
-    /* padding: 25px; */
     color: var(--mid-blue);
+    padding: 20px;
 }
 
 .button {
-    border: 25px 0;
     width: 160px;
     box-shadow: -15px 7px 30ox rgba(0, 0, 0, 0.2);
-    /* padding: 15px; */
+    padding: 15px;
     margin-bottom: 50px;
+    border-radius: 5px;
+    border: none;
 }
+
 
 /* About Section */
 
 .about-container {
-    margin: 10%;
-    width: 80%;
-    height: auto;
     background-color: #f8f8f8;
     box-shadow: -15px 7px 30ox rgba(0, 0, 0, 0.2);
+    padding: 60px 20px;
 }
 
 .about-section {
@@ -251,14 +277,18 @@ li a{
     margin-left: 100px;
 }
 
+
 .social-icons {
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-size: 2rem;
-    width: 30%;
-    margin: 25% 35%;
-    padding-top: 30px;
+}
+
+#contactme {
+    max-width: 600px;
+    margin: auto;
+    padding: 30px;
 }
 
 /* Mobile View */
@@ -281,45 +311,9 @@ li a{
     ul {
         background-color: rgba(0, 0, 0, 0.625);
     }
-
-    .movie-project {
-        width: 300px;
-        height: 360px;
-        background: #fff;
-        position: relative;
-        box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
-        border-radius: 10px;
-        margin: 50px;
-        background-image: url(/images/movie.jpg);
-        background-size: cover;
-        background-position: center;
-    }
-
-    .gym-project {
-        width: 300px;
-        height: 360px;
-        background: #fff;
-        position: relative;
-        box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
-        border-radius: 10px;
-        margin: 50px;
-        background-image: url(/images/ai.jpg);
-        background-size: cover;
-        background-position: center;
-    }
-    
-    .dsa-project {
-        width: 300px;
-        height: 360px;
-        background: #fff;
-        position: relative;
-        box-shadow: -15px 7px 30px rgba(0, 0, 0, 0.2);
-        border-radius: 10px;
-        margin: 50px;
-        background-image: url(/images/dsa.jpg);
-        background-size: cover;
-        background-position: center;
-    }
+    .projects {
+        grid-template-columns: auto;
+     }
 
     .about-container {
         display: flex;
